fix misaligned containers

--- a/css/inner/dashboard.less
+++ b/css/inner/dashboard.less
@@ -28,7 +28,7 @@
     width: 300px;
   }
   .dashboard-main {
-    padding: 3px;
+    padding: 0 3px 3px 0;
     overflow-x: auto;
     box-sizing: border-box;
   }
